--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.cdk-overlay-backdrop {
+    background-color: rgba(0, 0, 0, 0.8); /* Increase the opacity value */
+  }
