--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,16 +1,77 @@
-<div *ngIf="user">
-    <mat-card>
-        <mat-card-title>{{ user.name || user.login }}</mat-card-title>
-        <mat-card-content>
-            <p>{{ user.bio }}</p>
-            <p>Followers: {{ user.followers }}</p>
-            <p>Repositories: {{ repos.length }}</p>
-        </mat-card-content>
+<div class="profile-dialog">
+    <!-- Gradient Header Section -->
+    <div class="gradient-header">
+        <button mat-icon-button class="close-button" (click)="closeDialog()">
+            <mat-icon>close</mat-icon>
+          </button>
+    </div>
+  
+    <!-- Profile Details Section -->
+    <div class="profile-content">
+        <div class="profile-photo-container">
+          <img [src]="user.avatar_url" alt="User Avatar" class="profile-photo" />
+        </div>
+      
+        <div class="profile-details">
+          <h2>{{ user.name }}</h2>
+          <p class="position-info">{{ user.position }} at {{ user.company }}</p>
+          <p class="location-info">{{ user.location }}</p>
+        </div>
+      
+        <div class="action-button">
+            <button mat-button (click)="openUserProfile(user.html_url)">View Profile</button>
+        </div>
+      </div>
+      
+  
+    <!-- Additional Details Section -->
+    <mat-card class="additional-details">
+
+        <mat-accordion class="custom-accordion">
+            <mat-expansion-panel>
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  <span class="panel-title">
+                    <span class="panel-text">Repositories</span>
+                    <mat-icon class="panel-icon">folder_special</mat-icon>
+                    <span class="panel-count">{{user.public_repos}}</span>
+                  </span>
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <app-repo-list></app-repo-list>
+            </mat-expansion-panel>
+          </mat-accordion>
+
+        <mat-accordion class="custom-accordion">
+            <mat-expansion-panel>
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                    <span class="panel-title">
+                        <span class="panel-text">Followers</span>
+                        <mat-icon class="panel-icon">people</mat-icon>
+                        <span class="panel-count">{{user.followers}}</span>
+                      </span>
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <app-followers-list></app-followers-list>
+            </mat-expansion-panel>
+          </mat-accordion>
+        
+          <!-- Accordion for Following -->
+          <mat-accordion class="custom-accordion">
+            <mat-expansion-panel>
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                    <span class="panel-title">
+                        <span class="panel-text">Following </span>
+                        <mat-icon class="panel-icon">person_add</mat-icon>
+                        <span class="panel-count">{{user.following}}</span>
+                      </span>
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+    
+            </mat-expansion-panel>
+          </mat-accordion>
     </mat-card>
-
-    <h3>Repositories</h3>
-    <!-- <app-repo-list [repos]="repos"></app-repo-list> -->
-
-    <h3>Followers</h3>
-    <!-- <app-follower-count [followers]="followers.length"></app-follower-count> -->
-</div>
+  </div>
+  
