--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .cdk-overlay-backdrop {
     background-color: rgba(0, 0, 0, 0.8); /* Increase the opacity value */
   }
+  .error-message {
+    color: red;
+    font-weight: bold;
+    margin: 10px 0;
+    text-align: center;
+  }
