--- a/src/app/components/followerslist/followers.component.css
+++ b/src/app/components/followerslist/followers.component.css
@@ -1,22 +1,24 @@
 .table-container {
-  max-height: 170px; 
+  max-height: 170px;
   overflow-y: auto;
 }
 
-.error-message {
-    color: red;
-    font-weight: bold;
-    margin: 10px 0;
-    text-align: center;
-  }
-  
-  .profile-photo {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-  }
-  
-  table {
-    width: 100%;
-  }
-  
+.table-container .mat-header-row {
+  background-color: #3f51b5;
+  color: white;
+}
+
+.table-container .mat-header-cell {
+  font-weight: bold;
+  text-align: center;
+}
+
+.profile-photo {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+table {
+  width: 100%;
+}
