--- a/src/app/components/following-list/following-list.component.html
+++ b/src/app/components/following-list/following-list.component.html
@@ -1,88 +1,35 @@
+<div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
 <div class="table-container">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z1">
-      
-      <!-- Profile Photo Column -->
-      <ng-container matColumnDef="profilePhoto">
-        <th mat-header-cell *matHeaderCellDef> Profile Photo </th>
-        <td mat-cell *matCellDef="let user">
-          <img [src]="user.avatar_url" alt="{{ user.login }}" class="profile-photo" />
-        </td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let user"> {{ user.login }} </td>
-      </ng-container>
-  
-      <!-- Followers Count Column -->
-      <ng-container matColumnDef="followersCount">
-        <th mat-header-cell *matHeaderCellDef> Followers </th>
-        <td mat-cell *matCellDef="let user"> {{ user.followers }} </td>
-      </ng-container>
-  
-      <!-- Following Count Column -->
-      <ng-container matColumnDef="followingCount">
-        <th mat-header-cell *matHeaderCellDef> Following </th>
-        <td mat-cell *matCellDef="let user"> {{ user.following }} </td>
-      </ng-container>
-  
-      <!-- Profile Link Column with Link Icon -->
-      <ng-container matColumnDef="profileLink">
-        <th mat-header-cell *matHeaderCellDef> Profile </th>
-        <td mat-cell *matCellDef="let user">
-          <a [href]="user.html_url" target="_blank">
-            <mat-icon>link</mat-icon>
-          </a>
-        </td>
-      </ng-container>
-  
-      <!-- Header and Row Declarations -->
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
-  <div class="table-container">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z1">
-      
-      <!-- Profile Photo Column -->
-      <ng-container matColumnDef="profilePhoto">
-        <th mat-header-cell *matHeaderCellDef> Profile Photo </th>
-        <td mat-cell *matCellDef="let user">
-          <img [src]="user.avatar_url" alt="{{ user.login }}" class="profile-photo" />
-        </td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let user"> {{ user.login }} </td>
-      </ng-container>
-  
-      <!-- Followers Count Column -->
-      <ng-container matColumnDef="followersCount">
-        <th mat-header-cell *matHeaderCellDef> Followers </th>
-        <td mat-cell *matCellDef="let user"> {{ user.followers }} </td>
-      </ng-container>
-  
-      <!-- Following Count Column -->
-      <ng-container matColumnDef="followingCount">
-        <th mat-header-cell *matHeaderCellDef> Following </th>
-        <td mat-cell *matCellDef="let user"> {{ user.following }} </td>
-      </ng-container>
-  
-      <!-- Profile Link Column with Link Icon -->
-      <ng-container matColumnDef="profileLink">
-        <th mat-header-cell *matHeaderCellDef> Profile </th>
-        <td mat-cell *matCellDef="let user">
-          <a [href]="user.html_url" target="_blank">
-            <mat-icon>link</mat-icon>
-          </a>
-        </td>
-      </ng-container>
-  
-      <!-- Header and Row Declarations -->
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z1" *ngIf="!errorMessage">
+
+    <!-- Profile Photo Column -->
+    <ng-container matColumnDef="profilePhoto">
+      <th mat-header-cell *matHeaderCellDef> Profile Photo </th>
+      <td mat-cell *matCellDef="let user">
+        <img [src]="user.avatar_url" alt="{{ user.login }}" class="profile-photo" />
+      </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let user"> {{ user.login }} </td>
+    </ng-container>
+
+
+
+    <!-- Profile Link Column with Link Icon -->
+    <ng-container matColumnDef="profileLink">
+      <th mat-header-cell *matHeaderCellDef> Profile </th>
+      <td mat-cell *matCellDef="let user">
+        <a [href]="user.html_url" target="_blank">
+          <mat-icon>link</mat-icon>
+        </a>
+      </td>
+    </ng-container>
+
+    <!-- Header and Row Declarations -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
