--- a/src/app/components/user-search/user-search.component.css
+++ b/src/app/components/user-search/user-search.component.css
@@ -6,6 +6,10 @@
     height: 100vh;
 }
 
+.Project-title {
+    margin-top: -50px;
+}
+
 .logo-image {
     width: 400px;
     margin-bottom: 20px;
@@ -52,7 +56,7 @@
         width: 100%;
     }
 
-    .see-details{
+    .see-details {
         cursor: pointer;
     }
 
