chnaged icon to button

--- a/src/app/components/user-search/user-search.component.html
+++ b/src/app/components/user-search/user-search.component.html
@@ -64,8 +64,7 @@
                     </div>
                     <div class="user-info see-details">
                         <div class="icon-item" (click)="viewProfileDetails()">
-                            <mat-icon>pageview</mat-icon>
-                            <span>view-details</span>
+                            <button mat-flat-button>view-details</button>
                         </div>
                     </div>
                 </div>
